WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200434
context-attributes-alpha-depth-stencil-antialias fails on WPE WebKit
https://bugs.webkit.org/show_bug.cgi?id=200434
Summary
context-attributes-alpha-depth-stencil-antialias fails on WPE WebKit
Chris Lord
Reported
2019-08-05 02:08:14 PDT
On the WPE WebKit backend, context-attributes-alpha-depth-stencil-antialias fails when testing how many bits are available for the RGB channels on a no-alpha WebGL canvas. It expects 8bpp, but the surface is 16-bit in this case (RGB565).
Attachments
Patch
(3.33 KB, patch)
2019-08-05 04:31 PDT
,
Chris Lord
no flags
Details
Formatted Diff
Diff
Patch
(2.42 KB, patch)
2019-08-07 03:00 PDT
,
Chris Lord
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Lord
Comment 1
2019-08-05 04:31:22 PDT
Created
attachment 375528
[details]
Patch
Chris Lord
Comment 2
2019-08-07 03:00:18 PDT
Created
attachment 375691
[details]
Patch
WebKit Commit Bot
Comment 3
2019-08-07 03:44:23 PDT
Comment on
attachment 375691
[details]
Patch Clearing flags on attachment: 375691 Committed
r248362
: <
https://trac.webkit.org/changeset/248362
>
WebKit Commit Bot
Comment 4
2019-08-07 03:44:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug