context-attributes-alpha-depth-stencil-antialias fails on WPE WebKit https://bugs.webkit.org/show_bug.cgi?id=200434

Patch by Chris Lord <clord@igalia.com> on 2019-08-07
Reviewed by Žan Doberšek.

This patch fixes 16-bit surfaces being used for FBOs with no
alpha component when using the GLES implementation of GraphicsContext3D.

* platform/graphics/opengl/GraphicsContext3DOpenGLES.cpp:
(WebCore::GraphicsContext3D::reshapeFBOs):
Use GL_UNSIGNED_BYTE instead of GL_UNSIGNED_SHORT_5_6_5 for surfaces with no alpha.

Canonical link: https://commits.webkit.org/214267@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248362 268f45cc-cd09-0410-ab3c-d52691b4dbfc